--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -5,5 +5,5 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-
+<h1> Thomas container </h1>
 <SurveyPrompt Title="How is Blazor working for you?" />
