--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -6,4 +6,5 @@
 
 Welcome to your new app.
 <h1> Thomas container </h1>
+<h1> second change</h1>
 <SurveyPrompt Title="How is Blazor working for you?" />
