--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -7,4 +7,5 @@
 Welcome to your new app.
 <h1> Thomas container </h1>
 <h1> second change</h1>
+<h1> Thomas Linux Container</h1>
 <SurveyPrompt Title="How is Blazor working for you?" />
